# strateki

./: .gitignore  AuxiliaryIdManager.h  CMakeLists.txt  CameraControl.cpp  CameraControl.h  Definitions.h  EntityFactory.h  EntityManager.cpp  EntityManager.h  Game.cpp  Game.h  GameScreen.cpp  GameScreen.h  Grid.cpp  Grid.h  Helper.cpp  InfoOverlay.cpp  InfoOverlay.h  LICENSE  README.md  Screen.h  SelectionBox.cpp  SelectionBox.h  SelectionController.cpp  SelectionController.h  SelectionSphere.cpp  SelectionSphere.h  SelectionView.h  StartScreen.cpp  StartScreen.h  TerrainLoader.cpp  TerrainLoader.h  main.cpp  main.h  resources.cfg
ecs/: ComponentContainer.h  ComponentManager.h  Definitions.h  EntityManager.cpp  EntityManager.h  LICENSE  Register.h  System.h  SystemManager.h
ecs/components/: Components.h
ecs/systems/: CollisionSystem.h  DestinationSystem.h  GravitySystem.h  MeshSystem.h  MovementSystem.h  RenderSystem.h  TerrainCollisionSystem.h
media/: Material.material  MyCube.mesh  MyCube.mesh.xml  MyCube_Material.material  lighter.scene
media/font/: fonts.fontdef
media/lighter/: MyCube.scene  MyCube_Material.scene  MyCubee.mesh  MyCubee.mesh.xml  MyCubee_Material.material  Plane.mesh.xml  base.mesh  base.mesh.xml  foot.mesh  foot.mesh.xml  head.mesh  head.mesh.xml  knob.mesh  knob.mesh.xml  lighter.material  lighter.mesh  lighter.scene  lighter_base.material  lighter_foot.material  lighter_head.material  lighter_joined.scene  lighter_knob.material  lighter_wheel.material  lighter_wheelholder.material  wheel.mesh  wheel.mesh.xml
media/material/: tiles.material
media/tree/: tree.material
media/wolf/: Wolf1_Material__wolf_col_tga_0.mesh  Wolf1_Material__wolf_col_tga_0.mesh.xml  Wolf1_Material__wolf_col_tga_0.skeleton  Wolf_1.material  Wolf_Eyes.material  Wolf_Fur.material  Wolf_Teeth.material  Wolf_claws.material
test/: CMakeLists.txt  ComponentContainer_test.cpp  ComponentManager_test.cpp  main_test.cpp
